--- a/qc_checklist/views/views.xml
+++ b/qc_checklist/views/views.xml
@@ -158,7 +158,35 @@
         </field>
     </record>
 
+    <record id="product_tmpl_form" model="ir.ui.view">
+        <field name="name">Product template form inherit</field>
+        <field name="model">product.template</field>
+        <field name="inherit_id" ref="product.product_template_form_view"></field>
+        <field name="arch" type="xml">
+            <xpath expr="//div[@name='options']" position="inside">
+                <span class="d-inline-block">
+                    <field name="is_raw_material"/>
+                    <label for="is_raw_material"/>
+                </span>
+            </xpath>
+        </field>
+    </record>
+
+    <record id="product_tmpl_search_view_inherit" model="ir.ui.view">
+        <field name="name">Product template search inherit</field>
+        <field name="model">product.template</field>
+        <field name="inherit_id" ref="product.product_template_search_view"></field>
+        <field name="arch" type="xml">
+            <xpath expr="//filter[1]" position="after">
+                <filter string="Raw Material" name="raw_material" domain="[('is_raw_material','=',True)]"/>
+            </xpath>
+        </field>
+    </record>
     
+    <record id="mrp.product_template_action" model="ir.actions.act_window">
+        <field name="context">{'default_detailed_type': 'product', 'search_default_raw_material': 1}</field>
+    </record>
+
 
 
 </odoo>
